mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
  labels:
    app: mongo-express
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
